--- a/iconfont/star/iconfont.css
+++ b/iconfont/star/iconfont.css
@@ -8,7 +8,8 @@
 }
 
 .iconfont {
-  line-height: 33px;
+  height: 18px;
+  line-height: 18px;
   font-family:"iconfont" !important;
   font-size:18px;
   font-style:normal;
