--- a/css/frame.css
+++ b/css/frame.css
@@ -6,4 +6,14 @@
     100%{transform:rotateY(360deg) ;}
 
 }
-
+@keyframes scrollLR{
+    0%{transform: rotate(0deg);}
+    25%{transform:rotate(-10deg) ;}
+    50%{transform:rotate(0deg) ;}
+    75%{transform:rotate(10deg)  ;}
+    100%{transform:rotate(0deg)  ;}
+}
+@keyframes selfRotate{
+    0%{transform: rotate(0deg);}
+    100%{transform:rotate(360deg)  ;}
+}
