--- a/css/niezhengLive.css
+++ b/css/niezhengLive.css
@@ -2,6 +2,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,img
 dl, dt, dd, ol, ul, li, video {
+    font-family: 'HanHei SC', 'PingFang SC', 'Helvetica Neue', 'Helvetica', 'STHeitiSC-Light', 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     border: 0;
@@ -10,14 +11,17 @@ dl, dt, dd, ol, ul, li, video {
     vertical-align: baseline;
     /*list-style: none;*/
 }
+#main1,#main2,#main3,#main4{
+    display: none;
+}
 a{
     text-decoration: none;
 }
-/*body{*/
-    /*width:100%;*/
-    /*height:100%;*/
-    /*background: linear-gradient(rgba(231, 150, 84, 0.5), rgba(242, 202, 118, 0.5) 25%, rgba(242, 202, 118, 0.5) 25%, rgba(179, 149, 121, 0.5) 40%, rgba(179, 149, 121, 0.5) 40%, rgba(143, 178, 200, 0.5) 75%, rgba(143, 178, 200, 0.5) 75%, rgba(75, 103, 140, 0.5));*/
-/*}*/
+body{
+    width:100%;
+    height:100%;
+    background: linear-gradient(rgba(231, 150, 84, 0.5), rgba(242, 202, 118, 0.5) 25%, rgba(242, 202, 118, 0.5) 25%, rgba(179, 149, 121, 0.5) 40%, rgba(179, 149, 121, 0.5) 40%, rgba(143, 178, 200, 0.5) 75%, rgba(143, 178, 200, 0.5) 75%, rgba(75, 103, 140, 0.5));
+}
 #bg{
     display: block;
     position: absolute;
@@ -44,12 +48,12 @@ a{
     background-image: -moz-linear-gradient(90deg, #41b93e 0%, #3b9e3c 35%, #274535 75%, #190530 100%);
     background-image: -ms-linear-gradient(90deg, #41b93e 0%, #3b9e3c 35%, #274535 75%, #190530 100%);
 }
-#bg2 {
+#bg3 {
     background-image: -webkit-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
     background-image: -moz-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
     background-image: -ms-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
 }
-#bg3 {
+#bg2 {
     background-image: -webkit-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);
     background-image: -moz-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);
     background-image: -ms-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);
@@ -60,6 +64,7 @@ a{
     background-image: -moz-linear-gradient(90deg, #d74d53 0%, #c44655 35%, #4c184c 75%, #110145 100%);
     background-image: -ms-linear-gradient(90deg, #d74d53 0%, #c44655 35%, #4c184c 75%, #110145 100%);
 }
+
 #fix-header{
     width: 100%;
     height: 80px;
@@ -113,6 +118,7 @@ a{
     left: 3%;
     top: 50%;
     z-index: 999;
+    list-style: none;
 }
 #fix-tab li{
     width: 15px;
@@ -130,6 +136,7 @@ a{
     opacity: 0.7;
     top: 15%;
     right: 0%;
+    z-index: 1000;
     animation: moving-yun 20s infinite;
 }
 #main0,#main1,#main2,#main3,#main4{
@@ -137,21 +144,23 @@ a{
     width: 100%;
     height: 100%;
 }
-/*#main1,#main2,#main3,#main4{*/
+/*#bg1,#bg2,#bg3,#bg4,#main1,#main2,#main3,#main4{*/
     /*display: none;*/
 /*}*/
 #main0{
-    /*width: 60%;*/
     height: 100%;
-
     text-align: center;
-    z-index: 1000;
-    margin: 20% 0 0 20%;
+    z-index: 9;
+}
+#main0 hr{
+    height: 2px;
 }
 #main0 .ct{
     color: #7cff18;
     width: 60%;
     text-align: center;
+    margin: 20% 0 0 20%;
+    animation: scrollLR 20s infinite;
 }
 #main0 .ct h1{
     font-size: 26px;
@@ -165,18 +174,33 @@ a{
     font-size: 16px;
     margin: 20px;
 }
-#main0 .ct img{
-    width: 120px;
-    height: 120px;
+#main0 .ct img:nth-child(1){
+    width: 100px;
+    border: 4px solid #eee;
+    border-radius: 50%;
+    float: left;
+}
+#main0 .ct img:nth-child(2){
+    width: 180px;
+    /*height: 150px;*/
     border: 4px solid #eee;
     border-radius: 50%;
 }
+#main0 .ct img:nth-child(3){
+    width: 100px;
+    border: 4px solid #eee;
+    border-radius: 50%;
+    float: right;
+}
+#main1 hr{
+    height: 2px;
+}
 #main1 .ct{
+    color: #fff;
     position: absolute;
     width: 80%;
     text-align: center;
-    margin: 20% 0 0 10%;
-    font-family: 'HanHei SC', 'PingFang SC', 'Helvetica Neue', 'Helvetica', 'STHeitiSC-Light', 'Arial', sans-serif;
+    margin: 15% 0 0 10%;
 }
 #main1 .ct h1{
     font-size: 26px;
@@ -192,8 +216,9 @@ a{
     display: block;
     width: 180px;
     height: 180px;
-    border: 4px solid rgba(136,217,143,0.7);
+    border: 4px solid rgba(15, 217, 147, 0.7);
     border-radius: 50%;
+    animation: selfRotate 50s infinite;
     z-index: 1;
 }
 #main1 .ct>ul>li>div{
@@ -204,7 +229,7 @@ a{
     background: #587265;
     color: #fff;
     border-radius: 50%;
-    border: 4px solid #cbcca9;
+    border: 2px solid rgba(203, 204, 169, 0.1);
     display: none;
     opacity: 0.7;
     z-index: 5;
@@ -223,19 +248,20 @@ a{
     border: 1px solid #eee;
 }
 #main1 .ct p{
-    width: 500px;
+    width: 510px;
     font-size: 16px;
     line-height: 30px;
     margin: 50px auto;
     border-radius: 3px;
-    box-shadow: 10px 10px 3px #9f9da5;
+    box-shadow: 5px -5px 3px #5aea51;
 }
 #main2{
-    width: 63%;
+    width: 60%;
     height: 400px;
-    margin: 20% 0 0 25%;
-    border: 1px solid #2520ff;
-    border-radius: 3px;
+    margin: 15% 0 0 25%;
+    border: 1px solid #a0a0a0;
+    border-radius: 10px;
+    box-shadow: 5px 5px #eee;
     overflow: auto;
     background: #eee;
 
@@ -254,12 +280,14 @@ a{
     text-align: left;
     margin-left: 120px;
     z-index: 0;
+    box-shadow: 5px 5px #ca7d3e;
 }
 #main2 .active{
     display: block;
     background: #eee;
 }
 #main2 .nav{
+    color: white;
     float: left;
     width: 95px;
     height: 100%;
@@ -269,8 +297,8 @@ a{
 #main2 .nav li{
     height: 100px;
     text-align: center;
-    background: #4b8966;
-    border-radius: 3px;
+    background: #d98642;
+    border-radius: 0 100px 100px 0;
 }
 #main2 .nav li:hover{
     cursor: pointer;
@@ -281,11 +309,11 @@ a{
 #main3 .ct{
     position: relative;
     width: 310px;
-    height: 300px;
-    margin: 300px auto;
+    margin: 20% auto;
     text-align: center;
 }
 #main3 h1{
+    color: white;
     margin: 20px;
     font-size: 40px;
 }
@@ -294,16 +322,24 @@ a{
     width: 310px;
     height: 200px;
     transform:perspective(800px) ;
-    animation: scroll 50s infinite ;
     transform-style: preserve-3d;
+    animation: scroll 50s infinite ;
 }
+
 #main3 .wrap div{
     position: absolute;
     width: 310px;
     height: 200px;
     line-height: 200px;
-    border: 5px solid #fff;
+    border: 5px solid rgba(255 255 255 0.5) ;
     text-align: center;
+}
+#main3 .wrap a{
+    display: block;
+    width: 310px;
+    height: 200px;
+    font-size: 26px;
+    color: white;
 }
 #main3 .div1{
     background:url(../img/3d/1.jpg);
@@ -338,6 +374,19 @@ a{
     transform:  rotateY(280deg) translateZ(426px);
 }
 #main3 .div9 {
-    background: url(../img/3d/9.jpg);
+    background:url(../img/3d/6.jpg);
     transform: rotateY(320deg) translateZ(426px);
+}
+#main4 .ct{
+    width: 500px;
+    margin: 150px auto;
+    text-align: center;
+    color: #faaea6;
+}
+#main4 h1{
+    font-size: 30px;
+}
+#main4 p{
+    margin: 20px;
+    font-size: 26px;
 }
