--- a/css/niezhengLive.css
+++ b/css/niezhengLive.css
@@ -176,6 +176,7 @@ body{
 }
 #main0 .ct img:nth-child(1){
     width: 100px;
+    height: 30px;
     border: 4px solid #eee;
     border-radius: 50%;
     float: left;
@@ -188,6 +189,7 @@ body{
 }
 #main0 .ct img:nth-child(3){
     width: 100px;
+    height: 30px;
     border: 4px solid #eee;
     border-radius: 50%;
     float: right;
