--- a/css/niezhengLive.css
+++ b/css/niezhengLive.css
@@ -91,7 +91,7 @@ body{
 }
 #fix-header .my-name{
     text-align: center;
-    margin: 10px 0px 0px 30px;
+    margin: 10px 0px 0px 80px;
 }
 #fix-header .my-name p:nth-child(1){
     padding-bottom: 5px;
@@ -174,26 +174,26 @@ body{
     font-size: 16px;
     margin: 20px;
 }
-#main0 .ct img:nth-child(1){
-    width: 100px;
-    height: 30px;
-    border: 4px solid #eee;
-    border-radius: 50%;
-    float: left;
-}
+/*#main0 .ct img:nth-child(1){*/
+    /*width: 100px;*/
+    /*height: 30px;*/
+    /*border: 4px solid #eee;*/
+    /*border-radius: 50%;*/
+    /*float: left;*/
+/*}*/
 #main0 .ct img:nth-child(2){
     width: 180px;
     /*height: 150px;*/
     border: 4px solid #eee;
     border-radius: 50%;
 }
-#main0 .ct img:nth-child(3){
-    width: 100px;
-    height: 30px;
-    border: 4px solid #eee;
-    border-radius: 50%;
-    float: right;
-}
+/*#main0 .ct img:nth-child(3){*/
+    /*width: 100px;*/
+    /*height: 30px;*/
+    /*border: 4px solid #eee;*/
+    /*border-radius: 50%;*/
+    /*float: right;*/
+/*}*/
 #main1 hr{
     height: 2px;
 }
