--- a/css/niezhengLive.css
+++ b/css/niezhengLive.css
@@ -43,21 +43,21 @@ body{
     background-image: -moz-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
     background-image: -ms-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
 }
-#bg1 {
+#bg2,#bg3 {
     background-image: -webkit-linear-gradient(90deg, #41b93e 0%, #3b9e3c 35%, #274535 75%, #190530 100%);
     background-image: -moz-linear-gradient(90deg, #41b93e 0%, #3b9e3c 35%, #274535 75%, #190530 100%);
     background-image: -ms-linear-gradient(90deg, #41b93e 0%, #3b9e3c 35%, #274535 75%, #190530 100%);
 }
-#bg3 {
+#bg1 {
     background-image: -webkit-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
     background-image: -moz-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
     background-image: -ms-linear-gradient(90deg, #395ecb 0%, #3657be 35%, #242161 75%, #1a0531 100%);
 }
-#bg2 {
-    background-image: -webkit-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);
-    background-image: -moz-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);
-    background-image: -ms-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);
-}
+/*#bg2 {*/
+    /*background-image: -webkit-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);*/
+    /*background-image: -moz-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);*/
+    /*background-image: -ms-linear-gradient(90deg, #ff9f42 0%, #ed923d 35%, #6d3816 75%, #2e0b04 100%);*/
+/*}*/
 #bg4 {
     border: 1px solid;
     background-image: -webkit-linear-gradient(90deg, #d74d53 0%, #c44655 35%, #4c184c 75%, #110145 100%);
@@ -232,7 +232,7 @@ body{
     color: #fff;
     border-radius: 50%;
     border: 2px solid rgba(203, 204, 169, 0.1);
-    display: none;
+    /*display: none;*/
     opacity: 0.7;
     z-index: 5;
 }
@@ -266,7 +266,6 @@ body{
     box-shadow: 5px 5px #eee;
     overflow: auto;
     background: #eee;
-
 }
 #main2 ul{
     list-style: square;
@@ -274,7 +273,7 @@ body{
 #main2 .card{
     display: none;
     padding-top: 20px;
-    font-size: 18px;
+    font-size: 16px;
     width: 550px;
     height: 350px;
     line-height: 40px;
@@ -282,7 +281,9 @@ body{
     text-align: left;
     margin-left: 120px;
     z-index: 0;
-    box-shadow: 5px 5px #ca7d3e;
+    box-shadow: 5px 5px #569436;
+    color: #130549;
+    font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
 }
 #main2 .active{
     display: block;
@@ -299,7 +300,7 @@ body{
 #main2 .nav li{
     height: 100px;
     text-align: center;
-    background: #d98642;
+    background-image: linear-gradient(90deg, #41b93e 0%, #3b9e3c 35%, #274535 75%, #300a5c 100%);
     border-radius: 0 100px 100px 0;
 }
 #main2 .nav li:hover{
