--- a/ZhengNie.css
+++ b/ZhengNie.css
@@ -50,7 +50,7 @@ ul{
 }
 #left-aside{
     float: left;
-    padding-top: 10px;
+    padding-top: 50px;
     text-align: center;
     width: 200px;
     background: #0aaabf;
@@ -61,6 +61,9 @@ ul{
     height: 100px;
     border: 3px solid #fff;
     border-radius: 50%;
+}
+#left-aside .self-information{
+    margin-top: 50px;
 }
 #left-aside .weChat img{
     margin-top: 10px;
